spacing issue fixing

--- a/assets/Millennium.css
+++ b/assets/Millennium.css
@@ -7,3 +7,6 @@
 .template-collection .theme-block{
     margin-bottom: 0;
 }
+.template-collection .customj-content-section .custom-content{
+    padding-bottom: 20px;
+}
